--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "axios": "^1.6.7",
     "element-plus": "^2.5.4",
+    "file-saver": "^2.0.5",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
+    "jszip": "^3.10.1",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "save": "^2.9.0",
+    "sortablejs": "^1.15.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
