--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
     "element-plus": "^2.5.4",
     "file-saver": "^2.0.5",
