--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
+    "echarts": "^5.5.0",
     "element-plus": "^2.5.4",
     "file-saver": "^2.0.5",
     "gsap": "^3.12.5",
@@ -24,6 +25,7 @@
     "save": "^2.9.0",
     "sortablejs": "^1.15.2",
     "vue": "^3.3.11",
+    "vue-echarts": "^6.6.9",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
