--- a/template/package.json
+++ b/template/package.json
@@ -2,7 +2,9 @@
   "name": "<%= name %>",
   "private": true,
   "version": "<%= version %>",
+  <% if(description){ %>
   "description": "<%= description %>",
+  <% } %>
   "type": "module",
   "scripts": {
     "dev": "vite",
