update template content

--- a/template/package.json
+++ b/template/package.json
@@ -2,9 +2,7 @@
   "name": "<%= name %>",
   "private": true,
   "version": "<%= version %>",
-  <% if(description){ %>
-  "description": "<%= description %>",
-  <% } %>
+  <% if(description){ %>"description": "<%= description %>",<% } %>
   "type": "module",
   "scripts": {
     "dev": "vite",
